# opengl-projects

./: CMakeLists.txt  main.cpp
archive/: main2_old.cpp
include/: camera.h  cube.h  geometry.h  mesh.h  model.h  rectangle.h  shader.h  vertices.h  window.h
include/assimp/: revision.h
include/glad/: glad.h
shaders/lamp/: fragment.fs
shaders/lighting/: fragment.fs  vertex.vs
shaders/rectangle/: vertex.vs
src/: camera.cpp  cube.cpp  geometry.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  rectangle.cpp  shader.cpp  vertices.cpp  window.cpp
src/shaders/: fragment.fs
website/: main.cpp  shader.h
website/shaders/: fragment.fs  vertex.vs
